k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: django-auth
  labels:
    name: django-auth
