k8s/django-app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: django-app
  namespace: django-auth
  labels:
    app: django-app
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: django-app
