k8s/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: django-auth
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: postgres
    protocol: TCP
    name: postgres
  selector:
    app: postgres
