k8s/waf-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: waf
  namespace: django-auth
  labels:
    app: waf
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: waf
